--- a/src/ui/components/Card/Card.module.scss
+++ b/src/ui/components/Card/Card.module.scss
@@ -1,23 +1,26 @@
 .card {
-	padding: 16px;
-	border-radius: var(--border-radius-md);
-	background-color: var(--content-layer);
-	border-width: var(--card-border-width);
-	border-color: var(--card-border-color);
-	border-style: var(--card-border-style);
+    border-radius: 24px;
+    padding: 20px;
 
-	@media (prefers-color-scheme: dark) {
-		border-radius: 24px;
-		padding: 20px;
-		border: #ffffff10 1px solid;
-		backdrop-filter: blur(9px);
-	}
+    border-width: var(--card-border-width);
+    border-color: var(--card-border-color);
+    border-style: var(--card-border-style);
+
+    @media (prefers-color-scheme: light) {
+        background-color: var(--background-color);
+        box-shadow: rgba(#333, 12%) 0 0 24px;
+    }
+
+    @media (prefers-color-scheme: dark) {
+        border: #ffffff10 1px solid;
+        /* backdrop-filter: blur(9px); */
+    }
 }
 
 @media (max-width: 640px) {
-	.card.mobileShrink {
-		padding: 0;
-		background: transparent;
-		border-radius: 0;
-	}
+    .card.mobileShrink {
+        padding: 0;
+        background: transparent;
+        border-radius: 0;
+    }
 }
