--- a/src/components/Posts/Post/Post.module.scss
+++ b/src/components/Posts/Post/Post.module.scss
@@ -29,8 +29,10 @@
 .avatar {
     width: 32px;
     height: 32px;
-    background-color: #ddd;
     border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .date {
