add share popup and fix some bugs on mobile

--- a/src/entities/profile/ProfileMenu/ProfileMenu.module.scss
+++ b/src/entities/profile/ProfileMenu/ProfileMenu.module.scss
@@ -1,3 +1,21 @@
 .box {
   margin-bottom: 16px;
 }
+
+.button {
+  @media(max-width: 640px) {
+    font-size: 0;
+  }
+
+  &.active {
+    @media (max-width: 640px) {
+      font-size: 14px;
+    }
+  }
+}
+
+.hideMobile {
+  @media (max-width: 640px) {
+    display: none;
+  }
+}
