--- a/src/ui/components/PopupFooter/PopupFooter.module.scss
+++ b/src/ui/components/PopupFooter/PopupFooter.module.scss
@@ -1,6 +1,6 @@
 .footer {
-  margin: -32px;
-  margin-top: 32px;
+  // margin: -32px;
+  // margin-top: 32px;
   padding: 20px 32px;
   border-top: var(--medium-color) 1px solid;
   display: flex;
