--- a/src/widgets/UserProfile/UserProfile.module.scss
+++ b/src/widgets/UserProfile/UserProfile.module.scss
@@ -66,7 +66,7 @@
   align-items: center;
   flex-wrap: wrap;
 
-  div {
+  &>div {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -169,14 +169,12 @@
 
   &.nextLink {
     transition: background-position 1s;
-    background: linear-gradient(
-      90deg,
-      #f7c0ec,
-      #a9bfea,
-      #a9eaac,
-      #dba9ea,
-      #eaa9a9
-    );
+    background: linear-gradient(90deg,
+        #f7c0ec,
+        #a9bfea,
+        #a9eaac,
+        #dba9ea,
+        #eaa9a9);
     background-size: 400%;
     background-repeat: no-repeat;
     background-position-x: 0;
