--- a/src/entities/editor/EditorArea/EditorArea.module.css
+++ b/src/entities/editor/EditorArea/EditorArea.module.css
@@ -29,3 +29,27 @@
   padding-right: 12px;
   padding-block: 12px;
 }
+
+.aiStart {
+  padding: 24px;
+  margin: 8px;
+  background-color: var(--medium-color);
+  border-radius: 24px;
+}
+.aiTitle {
+  font-size: 20px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.aiDescription {
+  font-size: 14px;
+  margin-top: 6px;
+  margin-left: 24px;
+}
+
+.tryButton {
+  margin-top: 16px;
+  margin-left: 24px;
+}
