--- a/src/features/Post/Post.module.scss
+++ b/src/features/Post/Post.module.scss
@@ -4,10 +4,6 @@
   gap: 16px;
   width: 100%;
   backdrop-filter: unset;
-
-  * {
-    // max-width: 100%;
-  }
 }
 
 .author {
@@ -92,17 +88,31 @@
 
 .readMore {
   // font-weight: 500;
-  margin-top: -40px;
+  margin-top: -86px;
   font-size: 14px;
-  padding-top: 24px;
-  background-image: linear-gradient(to top,
-      var(--background-color) 25%,
-      transparent 120%);
+  padding-top: 48px;
+  background-image: linear-gradient(to top, var(--container-high) 20%, transparent 200%);
+
+  transition:
+    margin-top 0.3s,
+    background-image 0.3s;
 
   color: var(--accent-color);
+  position: relative;
 
   &:hover {
-    opacity: 0.9;
+    /* opacity: 0; */
+    background-image: linear-gradient(to top, var(--container-high) 0%, transparent 100%);
+    margin-top: -58px;
+  }
+
+  &:hover::before {
+    content: '';
+    width: 100%;
+    height: 30px;
+    display: block;
+    position: absolute;
+    bottom: 100%;
   }
 }
 
